# Mandelbrot

./: .gitignore  CMakeLists.txt  LICENCE  Mandelbrot.cpp  Mandelbrot.sln  Mandelbrot.vcxproj  README.md
.github/workflows/: release.yml
